--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "owinfo-web-common",
+  "name": "@web/common",
   "version": "1.0.0",
   "description": "前端公共仓库，包含文档说明、公共库函数、公共组件等",
   "author": "Jefy.Lee<lizhihui@owinfo.net>",
