--- a/package.json
+++ b/package.json
@@ -10,21 +10,13 @@
     "stylelint": "stylelint --cache --cache-location ./build/lint/.stylelintcache \"./**/*.scss\" \"./**/*.less\" \"./**/*.vue\""
   },
   "dependencies": {
-    "vue": "2.6.10",
-    "axios": "0.19.0"
+    "vue": "2.6.10"
   },
   "devDependencies": {
-    "@babel/core": "7.8.3",
-    "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/plugin-proposal-class-properties": "7.8.3",
-    "@babel/plugin-proposal-export-default-from": "7.8.3",
-    "node-sass": "4.13.0",
-    "sass-loader": "8.0.0",
     "vue-template-compiler": "2.6.10",
     "npm-run-all": "4.1.5",
-    "fs-extra": "8.1.0",
-    "gs-common": "0.2.1",
-    "gs-lint": "0.4.0",
+    "@web-io/build": "0.2.2",
+    "@web-io/lint": "0.4.1",
     "eslint": "6.8.0",
     "stylelint": "9.10.1",
     "babel-eslint": "10.0.3",
