--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "stylelint": "stylelint --cache --cache-location ./build/lint/.stylelintcache \"./**/*.scss\" \"./**/*.less\" \"./**/*.vue\""
   },
   "dependencies": {
-    "vue": "2.6.10"
+    "vue": "2.6.10",
+    "vuex": "3.5.1",
+    "react": "16.13.1",
+    "react-redux": "7.2.1"
   },
   "devDependencies": {
     "vue-template-compiler": "2.6.10",
+    "@types/react": "16.9.51",
+    "@types/react-redux": "7.1.9",
     "npm-run-all": "4.1.5",
     "@web-io/build": "0.2.3",
     "@web-io/lint": "0.4.1",
