--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "2.6.10",
     "vuex": "3.5.1",
     "react": "16.13.1",
+    "redux": "4.0.5",
     "react-redux": "7.2.1"
   },
   "devDependencies": {
