--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@web/common",
   "version": "1.0.4",
   "description": "前端公共仓库，包含文档说明、公共库函数、公共组件等",
-  "author": "Jefy.Lee<lizhihui@owinfo.net>",
+  "author": "leejefy <050934@gmail.com>",
   "private": true,
   "scripts": {
     "lint": "run-p eslint stylelint",
