--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "author": "leejefy <050934@gmail.com>",
   "private": true,
   "scripts": {
-    "lint": "run-p eslint stylelint",
+    "lint": "run-p eslint eslint-ts stylelint",
     "eslint": "eslint --config ./eslintrc.js --cache --cache-location ./build/lint/.eslintcache --ignore-pattern \"/src/vue/**\" --ext .js ./",
+    "eslint-ts": "eslint --config ./eslintrc-ts.js --cache --cache-location ./build/lint/.eslinttscache --ext .ts ./",
     "stylelint": "stylelint --cache --cache-location ./build/lint/.stylelintcache \"./**/*.scss\" \"./**/*.less\" \"./**/*.vue\""
   },
   "dependencies": {
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "vue-template-compiler": "2.6.10",
+    "typescript": "3.9.4",
     "@types/react": "16.9.51",
     "@types/react-redux": "7.1.9",
     "npm-run-all": "4.1.5",
@@ -26,6 +28,8 @@
     "eslint": "6.8.0",
     "stylelint": "9.10.1",
     "babel-eslint": "10.0.3",
+    "@typescript-eslint/parser": "4.4.1",
+    "@typescript-eslint/eslint-plugin": "4.4.1",
     "husky": "4.2.1",
     "lint-staged": "10.0.7"
   },
