add eslint ts rule & lint tsx

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ dist/
 build/lint/.cache_*
 build/lint/.eslintcache
 build/lint/.eslinttscache
+build/lint/.eslinttsxcache
 
 # ignore stylelint cache files
 build/lint/.stylelintcache*
