--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "author": "leejefy <050934@gmail.com>",
   "private": true,
   "scripts": {
-    "lint": "run-p eslint eslint-ts eslint-tsx stylelint",
+    "lint": "run-p eslint eslint-ts stylelint",
     "eslint": "eslint --config ./eslintrc.js --cache --cache-location ./build/lint/.eslintcache --ignore-pattern \"/src/vue/**\" --ext .js ./",
-    "eslint-ts": "eslint --config ./eslintrc-ts.js --cache --cache-location ./build/lint/.eslinttscache --ext .ts ./",
-    "eslint-tsx": "eslint --config ./eslintrc-tsx.js --cache --cache-location ./build/lint/.eslinttsxcache --ext .tsx ./",
+    "eslint-ts": "eslint --config ./eslintrc-ts.js --cache --cache-location ./build/lint/.eslinttscache --ext .ts,.tsx ./",
     "stylelint": "stylelint --cache --cache-location ./build/lint/.stylelintcache \"./**/*.scss\" \"./**/*.less\" \"./**/*.vue\""
   },
   "dependencies": {
@@ -29,8 +28,6 @@
     "eslint": "6.8.0",
     "stylelint": "9.10.1",
     "babel-eslint": "10.0.3",
-    "@typescript-eslint/parser": "4.4.1",
-    "@typescript-eslint/eslint-plugin": "4.4.1",
     "husky": "4.2.1",
     "lint-staged": "10.0.7"
   },
