--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,5 @@ dist/
 # svn directory
 .svn
 
-# ignore eslint cache files
-build/lint/.cache_*
-build/lint/.eslintcache
-build/lint/.eslinttscache
-
-# ignore stylelint cache files
-build/lint/.stylelintcache*
+# ignore cache files, e.g. eslint and stylelint cache files
+build/.cache/
