--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "@types/react-redux": "7.1.9",
     "npm-run-all": "4.1.5",
     "@web-io/build": "0.2.3",
-    "@web-io/lint": "0.4.1",
-    "@typescript-eslint/parser": "4.4.1",
-    "@typescript-eslint/eslint-plugin": "4.4.1",
+    "@web-io/lint": "0.5.0-dev1",
     "husky": "4.2.1",
     "lint-staged": "10.0.7"
   },
