--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "private": true,
   "scripts": {
     "lint": "run-p eslint stylelint",
-    "eslint": "eslint --config ./eslintrc.js --cache --cache-location ./build/lint/.eslintcache --ignore-pattern \"/src/vue/**\" --ext .js ./",
-    "stylelint": "stylelint --cache --cache-location ./build/lint/.stylelintcache \"./**/*.scss\" \"./**/*.less\" \"./**/*.vue\""
+    "eslint": "eslint --config ./eslintrc.js --cache --cache-location ./build/.cache/.eslintcache --ignore-pattern \"/src/vue/components/**\" --ext .js,jsx,ts,tsx ./",
+    "stylelint": "stylelint --cache --cache-location ./build/.cache/.stylelintcache \"./**/*.scss\" \"./**/*.less\" \"./**/*.vue\""
   },
   "dependencies": {
     "vue": "2.6.10",
@@ -18,14 +18,12 @@
   },
   "devDependencies": {
     "vue-template-compiler": "2.6.10",
+    "typescript": "3.9.7",
     "@types/react": "16.9.51",
     "@types/react-redux": "7.1.9",
     "npm-run-all": "4.1.5",
     "@web-io/build": "0.2.3",
-    "@web-io/lint": "0.4.1",
-    "eslint": "6.8.0",
-    "stylelint": "9.10.1",
-    "babel-eslint": "10.0.3",
+    "@web-io/lint": "0.5.0",
     "husky": "4.2.1",
     "lint-staged": "10.0.7"
   },
