--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "author": "leejefy <050934@gmail.com>",
   "private": true,
   "scripts": {
+    "build": "run-p lint build-env",
     "lint": "run-p eslint stylelint",
     "eslint": "eslint --config ./eslintrc.js --cache --cache-location ./build/.cache/.eslintcache --ignore-pattern \"/src/vue/components/**\" --ext .js,jsx,ts,tsx ./",
-    "stylelint": "stylelint --cache --cache-location ./build/.cache/.stylelintcache \"./**/*.scss\" \"./**/*.less\" \"./**/*.vue\""
+    "stylelint": "stylelint --cache --cache-location ./build/.cache/.stylelintcache \"./**/*.scss\" \"./**/*.less\" \"./**/*.vue\"",
+    "build-env": "node ./build/build-env.js"
   },
   "dependencies": {
     "vue": "2.6.10",
