--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@web/common",
   "version": "1.0.7",
-  "description": "前端公共仓库，包含文档说明、公共库函数、公共组件等",
+  "description": "前端公共仓库，包含文档说明、公共库函数、公共组件、构建脚本",
   "author": "leejefy <050934@gmail.com>",
   "private": true,
   "scripts": {
@@ -30,9 +30,8 @@
     "lint-staged": "10.0.7"
   },
   "license": "MIT",
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 9"
-  ]
+  "repository": {
+    "type": "git",
+    "url": "https://gitee.com/phoenix-tech/web-common.git"
+  }
 }
