--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,9 @@
 {
+  "extends": "./tsconfig/tsconfig-base.json",
   "compilerOptions": {
-    "target": "es5",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "baseUrl": ".",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    // 排除js/jsx文件, 默认`false`，排除的意思就是模块解析时不会扫描js/jsx文件
-    // 建议在ts项目中不要混用ts + js，而是只允许ts，除非是基于js的项目在完全迁移到ts可以开启
-    // https://www.typescriptlang.org/tsconfig#allowJs
-    "allowJs": false,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
     // 不输出js文件，默认`false`，如果ts和js混合会导致提示js文件会被覆盖错误
     // https://www.typescriptlang.org/tsconfig#noEmit
-    "noEmit": true,
-    "jsx": "react"
+    "noEmit": true
   },
   // if glob pattern doesn’t include a file extension
   // only files with supported extensions are included (e.g. .ts, .tsx, and .d.ts by default, with .js and .jsx if allowJs is set to true)
@@ -32,13 +12,5 @@
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx"
-  ],
-  // exclude可以排除include里面包含的文件，就相当于include重写，比如src里面包含构建相关的ts文件在build目录中
-  // 可以加一条exclude `src/build/**/*`来排除构建文件，我们最好不要这样组织项目目录结构，因为会造成目录结构混乱
-  // https://www.typescriptlang.org/tsconfig#exclude
-  "exclude": [
-    "node_modules",
-    "build",
-    "doc"
   ]
 }
