output ts declaration files

--- a/tsconfig-cjs.json
+++ b/tsconfig-cjs.json
@@ -2,7 +2,8 @@
   "extends": "./tsconfig/tsconfig-base.json",
   "compilerOptions": {
     "module": "commonjs",
-    "outDir": "./lib"
+    "outDir": "./lib",
+    "declaration": true
   },
   "include": [
     "src-ts/**/*.ts",
