--- a/tsconfig-esm.json
+++ b/tsconfig-esm.json
@@ -1,7 +1,8 @@
 {
   "extends": "./tsconfig/tsconfig-base.json",
   "compilerOptions": {
-    "outDir": "./es"
+    "outDir": "./es",
+    "declaration": true
   },
   "include": [
     "src-ts/**/*.ts",
