--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
   // IntelliJ IDEA对`src`、`src/**/**`会检查vue文件!?
   "include": [
     "src/**/*.ts",
-    "src/**/*.tsx"
+    "src/**/*.tsx",
+    "src-ts/**/*.ts",
+    "src-ts/**/*.tsx"
   ]
 }
