--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "leejefy <050934@gmail.com>",
   "private": true,
   "scripts": {
-    "build": "run-p lint build-ts",
+    "clean": "rimraf ./dist ./es ./lib",
+    "build": "run-s lint clean build-ts",
     "lint": "run-p eslint stylelint",
     "eslint": "eslint --config ./eslintrc.js --cache --cache-location ./build/.cache/.eslintcache --ext .js,jsx,ts,tsx ./",
     "stylelint": "stylelint --cache --cache-location ./build/.cache/.stylelintcache \"./**/*.scss\" \"./**/*.less\" \"./**/*.vue\"",
@@ -30,7 +31,8 @@
     "@web-io/build": "0.3.0",
     "@web-io/lint": "0.5.0",
     "husky": "4.2.1",
-    "lint-staged": "10.0.7"
+    "lint-staged": "10.0.7",
+    "rimraf": "3.0.2"
   },
   "license": "MIT",
   "repository": {
