--- a/tsconfig-esm.json
+++ b/tsconfig-esm.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig/tsconfig-base.json",
+  "extends": "./tsconfig-base.json",
   "compilerOptions": {
     "outDir": "./es",
     "declaration": true
