--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig/tsconfig-base.json",
+  "extends": "./tsconfig-base.json",
   "compilerOptions": {
     // 不输出js文件，默认`false`，如果ts和js混合会导致提示js文件会被覆盖错误
     // https://www.typescriptlang.org/tsconfig#noEmit
