chore: env忽略某些环境下找不到process类型申明

--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -22,18 +22,6 @@
     "isolatedModules": true,
     "jsx": "react"
   },
-  // exclude可以排除include里面包含的文件，就相当于include重写，比如src里面包含构建相关的ts文件在build目录中
-  // 可以加一条exclude `src/build/**/*`来排除构建文件，我们最好不要这样组织项目目录结构，因为会造成目录结构混乱
-  // https://www.typescriptlang.org/tsconfig#exclude
-  "exclude": [
-    "node_modules",
-    "build",
-    "doc",
-    "dist",
-    "es",
-    "lib",
-    "src/ts"
-  ],
   // if glob pattern doesn’t include a file extension
   // only files with supported extensions are included (e.g. .ts, .tsx, and .d.ts by default, with .js and .jsx if allowJs is set to true)
   // https://www.typescriptlang.org/tsconfig#include
@@ -42,7 +30,12 @@
   // 注：通过`extends`继承配置文件时跟文件路径相关配置相对路径是相对于当前文件而不是入口文件
   // https://www.typescriptlang.org/tsconfig#extends
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx"
+    "src"
+  ],
+  // exclude可以排除include里面包含的文件，就相当于include重写，比如src里面包含构建相关的ts文件在build目录中
+  // 可以加一条exclude `src/build/**/*`来排除构建文件，我们最好不要这样组织项目目录结构，因为会造成目录结构混乱
+  // https://www.typescriptlang.org/tsconfig#exclude
+  "exclude": [
+    "src/ts"
   ]
 }
