chore: 配置npm files
配置files字段只发布构建输出目录

--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
     "lint-staged": "10.0.7",
     "rimraf": "3.0.2"
   },
+  "files": [
+    "dist",
+    "es",
+    "lib"
+  ],
   "license": "MIT",
   "repository": {
     "type": "git",
