--- a/package.json
+++ b/package.json
@@ -15,17 +15,15 @@
     "build-ts-esm": "tsc --project ./tsconfig-esm.json",
     "build-ts-umd": "tsc --project ./tsconfig-umd.json"
   },
-  "dependencies": {
+  "devDependencies": {
     "vue": "2.6.10",
     "vuex": "3.5.1",
-    "react": "16.13.1",
+    "react": "16.14.0",
     "redux": "4.0.5",
-    "react-redux": "7.2.1"
-  },
-  "devDependencies": {
+    "react-redux": "7.2.1",
     "vue-template-compiler": "2.6.10",
     "typescript": "3.9.7",
-    "@types/react": "16.9.51",
+    "@types/react": "16.14.4",
     "@types/react-redux": "7.1.9",
     "npm-run-all": "4.1.5",
     "@web-io/lint": "0.5.0",
