--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,28 @@ es/utils/http/**
 !es/utils/http/index.d.ts
 !es/utils/http/addUrlTimestamp.js
 !es/utils/http/addUrlTimestamp.d.ts
+
+!es/vue
+es/vue/**
+!es/vue/mixins
+es/vue/mixins/**
+!es/vue/mixins/loading.js
+!es/vue/mixins/loading.d.ts
+!es/vue/mixins/stateloading.js
+!es/vue/mixins/stateloading.d.ts
+!es/vue/mixins/withstore.js
+!es/vue/mixins/withstore.d.ts
+!es/vue/stores
+es/vue/stores/**
+!es/vue/stores/modules
+es/vue/stores/modules/**
+!es/vue/stores/modules/withsetters.js
+!es/vue/stores/modules/withsetters.d.ts
+!es/vue/stores/plugins
+es/vue/stores/plugins/**
+!es/vue/stores/plugins/createsetters.js
+!es/vue/stores/plugins/createsetters.d.ts
+!es/vue/types
+es/vue/types/**
+!es/vue/types/SettersStore.js
+!es/vue/types/SettersStore.d.ts
