--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@web-io/common",
-  "version": "1.1.0-dev6",
+  "version": "1.1.0",
   "description": "前端公共仓库，包含文档说明、公共库函数、公共组件、构建脚本",
   "author": "leejefy <050934@gmail.com>",
   "homepage": "https://gitee.com/phoenix-tech/web-common",
