--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "build-ts-esm": "tsc --project ./tsconfig-esm.json",
     "build-ts-umd": "tsc --project ./tsconfig-umd.json"
   },
+  "dependencies": {
+    "tslib": "2.2.0"
+  },
   "devDependencies": {
     "vue": "2.6.10",
     "vuex": "3.5.1",
