chore: 排除lib和es目录，删除兼容性代码

--- a/.gitignore
+++ b/.gitignore
@@ -16,85 +16,5 @@ node_modules/
 build/.cache/
 
 dist/
-
-lib/**
-!lib/env.js
-!lib/env.d.ts
-
-es/**
-!es/env.js
-!es/env.d.ts
-
-!es/types
-es/types/**
-!es/types/index.d.ts
-
-!es/types/http
-es/types/http/**
-!es/types/http/index.d.ts
-!es/types/http/Response.d.ts
-
-!es/utils
-es/utils/**
-!es/utils/addStyleSheet.js
-!es/utils/addStyleSheet.d.ts
-!es/utils/datetimeformatter.js
-!es/utils/datetimeformatter.d.ts
-!es/utils/delemptyval.js
-!es/utils/delemptyval.d.ts
-!es/utils/downloadFile.js
-!es/utils/downloadFile.d.ts
-!es/utils/extendstore.js
-!es/utils/extendstore.d.ts
-!es/utils/getURLParameter.js
-!es/utils/getURLParameter.d.ts
-!es/utils/imgToBlob.js
-!es/utils/imgToBlob.d.ts
-!es/utils/isDataUrl.js
-!es/utils/isDataUrl.d.ts
-!es/utils/isobj.js
-!es/utils/isobj.d.ts
-!es/utils/loadImage.js
-!es/utils/loadImage.d.ts
-!es/utils/loadScript.js
-!es/utils/loadScript.d.ts
-!es/utils/moneySmallToBig.js
-!es/utils/moneySmallToBig.d.ts
-!es/utils/readFileToDataUrl.js
-!es/utils/readFileToDataUrl.d.ts
-!es/utils/saveFile.js
-!es/utils/saveFile.d.ts
-!es/utils/uuid.js
-!es/utils/uuid.d.ts
-
-!es/utils/http
-es/utils/http/**
-!es/utils/http/index.js
-!es/utils/http/index.d.ts
-!es/utils/http/addUrlTimestamp.js
-!es/utils/http/addUrlTimestamp.d.ts
-
-!es/vue
-es/vue/**
-!es/vue/mixins
-es/vue/mixins/**
-!es/vue/mixins/loading.js
-!es/vue/mixins/loading.d.ts
-!es/vue/mixins/stateloading.js
-!es/vue/mixins/stateloading.d.ts
-!es/vue/mixins/withstore.js
-!es/vue/mixins/withstore.d.ts
-!es/vue/stores
-es/vue/stores/**
-!es/vue/stores/modules
-es/vue/stores/modules/**
-!es/vue/stores/modules/withsetters.js
-!es/vue/stores/modules/withsetters.d.ts
-!es/vue/stores/plugins
-es/vue/stores/plugins/**
-!es/vue/stores/plugins/createsetters.js
-!es/vue/stores/plugins/createsetters.d.ts
-!es/vue/types
-es/vue/types/**
-!es/vue/types/SettersStore.js
-!es/vue/types/SettersStore.d.ts
+lib/
+es/
