--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "homepage": "https://gitee.com/phoenix-tech/web-common",
   "scripts": {
     "clean": "rimraf ./dist ./es ./lib",
-    "build": "run-s lint clean build-ts",
+    "build": "run-s lint clean build-ts add-module-exports-env",
     "lint": "run-p eslint stylelint",
     "eslint": "eslint --cache --cache-location ./build/.cache/.eslintcache --ext .js,.jsx,.ts,.tsx ./",
     "stylelint": "stylelint --cache --cache-location ./build/.cache/.stylelintcache \"./**/*.scss\" \"./**/*.less\" \"./**/*.vue\"",
     "build-ts": "run-p build-ts-cjs build-ts-esm build-ts-umd",
     "build-ts-cjs": "tsc --project ./tsconfig-cjs.json",
     "build-ts-esm": "tsc --project ./tsconfig-esm.json",
-    "build-ts-umd": "tsc --project ./tsconfig-umd.json"
+    "build-ts-umd": "tsc --project ./tsconfig-umd.json",
+    "add-module-exports-env": "npx babel ./es/env.js --out-file ./lib/env.js"
   },
   "dependencies": {
     "tslib": "2.2.0"
@@ -27,6 +28,10 @@
     "typescript": "3.9.7",
     "@types/react": "16.14.4",
     "@types/react-redux": "7.1.9",
+    "@babel/core": "7.14.6",
+    "@babel/cli": "7.14.5",
+    "@babel/preset-env": "7.14.7",
+    "babel-plugin-add-module-exports": "1.0.4",
     "npm-run-all": "4.1.5",
     "@web-io/lint": "0.5.0",
     "husky": "4.2.1",
