--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "clean": "rimraf ./dist ./es ./lib",
     "build": "run-s lint clean build-ts add-module-exports-env",
     "lint": "run-p eslint stylelint",
+    "lint:fix": "run-p eslint stylelint",
     "eslint": "eslint --cache --cache-location ./build/.cache/.eslintcache --ext .js,.jsx,.ts,.tsx ./",
-    "stylelint": "stylelint --cache --cache-location ./build/.cache/.stylelintcache \"./**/*.scss\" \"./**/*.less\" \"./**/*.vue\"",
+    "eslint:fix": "eslint --fix --cache --cache-location ./build/.cache/.eslintcache --ext .js,.jsx,.ts,.tsx ./",
+    "stylelint": "stylelint --cache --cache-location ./build/.cache/.stylelintcache \"./**/*.{scss,less,vue}\"",
+    "stylelint:fix": "stylelint --fix --cache --cache-location ./build/.cache/.stylelintcache \"./**/*.{scss,less,vue}\"",
     "build-ts": "run-p build-ts-cjs build-ts-esm build-ts-umd",
     "build-ts-cjs": "tsc --project ./tsconfig-cjs.json",
     "build-ts-esm": "tsc --project ./tsconfig-esm.json",
@@ -33,9 +36,9 @@
     "@babel/preset-env": "7.14.7",
     "babel-plugin-add-module-exports": "1.0.4",
     "npm-run-all": "4.1.5",
-    "@web-io/lint": "0.5.0",
-    "husky": "4.2.1",
-    "lint-staged": "10.0.7",
+    "@web-io/lint": "1.0.0",
+    "husky": "4.3.8",
+    "lint-staged": "10.5.4",
     "rimraf": "3.0.2"
   },
   "files": [
