--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build-ts-cjs": "tsc --project ./tsconfig-cjs.json",
     "build-ts-esm": "tsc --project ./tsconfig-esm.json",
     "build-ts-umd": "tsc --project ./tsconfig-umd.json",
-    "add-module-exports-env": "npx babel ./es/env.js --out-file ./lib/env.js"
+    "add-module-exports-env": "node ./scripts/add-module-exports-env.js"
   },
   "dependencies": {
     "tslib": "2.2.0"
@@ -32,7 +32,6 @@
     "@types/react": "16.14.4",
     "@types/react-redux": "7.1.9",
     "@babel/core": "7.14.6",
-    "@babel/cli": "7.14.5",
     "@babel/preset-env": "7.14.7",
     "babel-plugin-add-module-exports": "1.0.4",
     "npm-run-all": "4.1.5",
