--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -36,5 +36,11 @@
   // exclude可以排除include里面包含的文件，就相当于include重写，比如src里面包含构建相关的ts文件在build目录中
   // 可以加一条exclude `src/build/**/*`来排除构建文件，我们最好不要这样组织项目目录结构，因为会造成目录结构混乱
   // https://www.typescriptlang.org/tsconfig#exclude
-  "exclude": []
+  "exclude": [
+    // 排除测试文件
+    "src/**/*.test.ts",
+    "src/**/*.test.tsx",
+    "src/**/*.spec.ts",
+    "src/**/*.spec.tsx"
+  ]
 }
