--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build-ts-esm": "tsc --project ./tsconfig-esm.json",
     "build-ts-umd": "tsc --project ./tsconfig-umd.json",
     "add-module-exports-env": "node ./scripts/add-module-exports-env.js",
-    "docs": "npx typedoc",
+    "docs": "npx web-io-tsdoc",
     "test": "npx jest"
   },
   "dependencies": {
@@ -36,13 +36,13 @@
     "@babel/core": "7.14.6",
     "@babel/preset-env": "7.14.7",
     "babel-plugin-add-module-exports": "1.0.4",
-    "typedoc": "0.21.3",
     "npm-run-all": "4.1.5",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "rimraf": "3.0.2",
     "@web-io/lint": "1.0.0",
-    "@web-io/jest": "file:deps/web-io-jest-1.0.0-dev1.tgz"
+    "@web-io/jest": "file:deps/web-io-jest-1.0.0-dev1.tgz",
+    "@web-io/tsdoc": "file:deps/web-io-tsdoc-1.0.0-dev1.tgz"
   },
   "files": [
     "dist",
