--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "rimraf": "3.0.2",
-    "@web-io/lint": "1.0.0",
+    "@web-io/lint": "file:deps/web-io-lint-1.0.1-dev1.tgz",
     "@web-io/jest": "file:deps/web-io-jest-1.0.0-dev2.tgz",
     "@web-io/tsdoc": "file:deps/web-io-tsdoc-1.0.0-dev1.tgz"
   },
