--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,13 @@ node_modules/
 
 # Editor directories and files
 .idea
-.vscode
+!.vscode
+.vscode/*
+!.vscode/settings.json
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-
-# svn directory
-.svn
 
 # eslint and stylelint cache files
 build/.cache/
