--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@web-io/common",
-  "version": "1.1.0",
+  "version": "1.2.0-dev1",
   "description": "前端公共仓库，包含文档说明、公共库函数、公共组件、构建脚本",
   "author": "leejefy <050934@gmail.com>",
   "homepage": "https://gitee.com/phoenix-tech/web-common",
@@ -9,10 +9,10 @@
     "build": "run-s clean lint test build-ts add-module-exports-env docs",
     "lint": "run-p eslint stylelint",
     "lint:fix": "run-p eslint:fix stylelint:fix",
-    "eslint": "eslint --cache --cache-location ./build/.cache/.eslintcache --ext .js,.jsx,.ts,.tsx ./",
-    "eslint:fix": "eslint --fix --cache --cache-location ./build/.cache/.eslintcache --ext .js,.jsx,.ts,.tsx ./",
-    "stylelint": "stylelint --cache --cache-location ./build/.cache/.stylelintcache \"./**/*.{scss,less,vue}\"",
-    "stylelint:fix": "stylelint --fix --cache --cache-location ./build/.cache/.stylelintcache \"./**/*.{scss,less,vue}\"",
+    "eslint": "eslint --cache --cache-location ./node_modules/.cache/.eslintcache --ext .js,.jsx,.ts,.tsx ./",
+    "eslint:fix": "eslint --fix --cache --cache-location ./node_modules/.cache/.eslintcache --ext .js,.jsx,.ts,.tsx ./",
+    "stylelint": "stylelint --cache --cache-location ./node_modules/.cache/.stylelintcache \"./**/*.{scss,less,vue}\"",
+    "stylelint:fix": "stylelint --fix --cache --cache-location ./node_modules/.cache/.stylelintcache \"./**/*.{scss,less,vue}\"",
     "build-ts": "run-p build-ts-cjs build-ts-esm build-ts-umd",
     "build-ts-cjs": "tsc --project ./tsconfig-cjs.json",
     "build-ts-esm": "tsc --project ./tsconfig-esm.json",
