--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://gitee.com/phoenix-tech/web-common",
   "scripts": {
     "clean": "rimraf ./dist ./es ./lib ./docs",
-    "build": "run-s clean lint test build-ts add-module-exports-env docs",
+    "build": "run-s clean lint test build-ts add-module-exports docs",
     "lint": "run-p eslint stylelint",
     "lint:fix": "run-p eslint:fix stylelint:fix",
     "eslint": "eslint --cache --cache-location ./node_modules/.cache/.eslintcache --ext .js,.jsx,.ts,.tsx ./",
@@ -17,7 +17,7 @@
     "build-ts-cjs": "tsc --project ./tsconfig-cjs.json",
     "build-ts-esm": "tsc --project ./tsconfig-esm.json",
     "build-ts-umd": "tsc --project ./tsconfig-umd.json",
-    "add-module-exports-env": "node ./scripts/add-module-exports-env.js",
+    "add-module-exports": "ts-node --project ./tsconfig-cjs.json ./scripts/add-module-exports.ts",
     "test": "npx web-io-jest",
     "docs": "npx web-io-tsdoc"
   },
@@ -33,9 +33,6 @@
     "typescript": "4.3.5",
     "@types/react": "16.14.4",
     "@types/react-redux": "7.1.9",
-    "@babel/core": "7.14.6",
-    "@babel/preset-env": "7.14.7",
-    "babel-plugin-add-module-exports": "1.0.4",
     "npm-run-all": "4.1.5",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
